testing contact form

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
   </br>
       <div id="contactdiv" class="contenttext">
-        <form name="htmlform" method="post" action="send_form_email.php">
+        <form name="htmlform" method="POST" action="send_form_email.php">
           <table width="450px">
           </tr>
           <tr>
