apparently i can't use php with github hosted pages, so back to the drawing board

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           </tr>
           <tr>
            <td valign="top">
-            <label for="comments">Viesti *</label>
+            <label for="comments">Viestisi *</label>
            </td>
            <td valign="top">
             <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
