form added  to en/index.html

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 
      <div class="page" id="reference" >
-      <div  class="headerdiv" style="text-align: center; margin-right: 20%;" ><h1 class="contenttext">Referenssit</h1></div>
+      <div  class="headerdiv" style="text-align: center;" ><h1 class="contenttext">Referenssit</h1></div>
       <div class="contenttext" id="referencediv" >
           <div id="experiencediv" style="width:30%; height:50%; float:left;">
             <h2>TYÖKOKEMUS</h2>
@@ -324,7 +324,6 @@
           
           </div>
         
-  </div>
  <script src="mail.js"></script>
     <script src="app.js"></script>
     </main>
