--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
   </br>
       <div id="contactdiv" class="contenttext">
-        <form method="POST" onsubmit="return validateContactForm()" action="https://formspree.io/mlelngda" >
+        <form method="POST" style="margin-right: auto; margin-left:auto" onsubmit="return validateContactForm()" action="https://formspree.io/mlelngda" >
           <div class="input-row">
             <label style="padding-top: 20px;" class="contenttext">Nimi</label> <span
                 id="userName-info" class="info"></span><br /> <input
@@ -306,7 +306,7 @@
             <label class="contenttext">Viesti</label> <span id="userMessage-info"
                 class="info"></span><br />
             <textarea name="content" id="content"
-                class="input-field" cols="60" rows="6"></textarea>
+                class="input-field" cols="40" rows="10"></textarea>
         </div>
         <div>
             <input type="submit" name="send" class="btn-submit"
