--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <h2>TYÖKOKEMUS</h2>
            <h4> Turun Tietokeskus Oy</h4>	ICT-asentaja			02/2018-06/2018
            <h4>SCF Huolto Oy </h4> 		ICT-asentaja			02/2014–07/2017
-           <h4>Linjakaivuu Pöytyä Oy </h4> 		Maanrakennustyöntekijä		08/2012–09/2012
+           <h4>Linjakaivuu Pöytyä Oy </h4> 		Maanrakennustyö		08/2012–09/2012
            <h4>Pöytyän kunta</h4> 	IT-tuki			10/2011–02/2012
            <h4>Aurajoki Oy </h4> 			Metallityöntekijä		01/2008 – 09/2008
            <h4> Nokia Oy</h4>			Kokoonpanotyöntekijä		06/2006 – 12/2006
