--- a/en/index.html
+++ b/en/index.html
@@ -205,7 +205,7 @@
 
      <div class="page theme" id="reference" >
         <div  class="headerdiv" style="text-align: center;"><h1 id="rhead" class="contenttext">References</h1></div>
-        <div class="contenttext" id="referencediv" >
+        <div id="referencediv" >
             <div id="experiencediv" style="width:30%; height:50%; float:left;">
             <h2>WORK EXPERIENCE</h2>
             <h4>Evondos</h4> Assembling medicine robots, summer job    06/2019-08/2019
@@ -215,7 +215,11 @@
            <h4>Pöytyä municipality</h4> 	IT-support		10/2011–02/2012
            <h4>Aurajoki Oy </h4> 	Metal worker		01/2008 – 09/2008
            <h4> Nokia Oy</h4>		Assembly worker		06/2006 – 12/2006
-           <h4>Pöytyä municipality</h4> 		IT-support		02/2006 – 05/2006
+           <h4>Pöytyä municipality</h4> IT-support 02/2006 – 05/2006
+           </br>
+        </br>
+    </br>
+</br></br>
         </div>
             <div style="width:50%;height:50%;float:right">
             <h2>EDUCATION</h2>
